@@ -3,6 +3,11 @@ Note : this project started in October 2016.
 Many improvements have been done since this date until August 2018.
 Then the project has been refreshed in March 2019 with major modifications, in a more pythonic way.
 
+22/04/2019
+    In software_scan.py module
+        Code correction in softwareInit() to improve software table display
+        Code correction in searchSoftware() to get software without version
+
 21/04/2019
     In writer.py module
         Clean code
